@@ -209,6 +209,9 @@ Push server forward raw data (default)
 Push server forward basestation data
 .TP
 .B
+\fB--net-push-delay\fP=<seconds> Push server re-connection delay (default: 30)
+.TP
+.B
 \fB--net-ri-port\fP=<ports>
 TCP raw input listen ports  (default: 30001)
 .TP
